// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly primary button 1`] = `
<button
  className="button button-primary"
  type="button"
>
  <div
    className="button-content"
  >
    Primary Button
  </div>
</button>
`;

exports[`renders correctly secondary button 1`] = `
<button
  className="button button-secondary"
  type="button"
>
  <div
    className="button-content"
  >
    Secondary Button
  </div>
</button>
`;
